--- a/blog/package.json
+++ b/blog/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "body-parser": "~1.13.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.2.0",
